Added day2 part2 solution. Moved common day2 code to separate header.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,5 +40,8 @@ find_package(range-v3)
 add_executable(day1 day1.cc)
 target_link_libraries(day1 PRIVATE range-v3::range-v3)
 
-add_executable(day2 day2.cc)
-target_link_libraries(day2 PRIVATE range-v3::range-v3)
+add_executable(day2_part1 day2_part1.cc)
+target_link_libraries(day2_part1 PRIVATE range-v3::range-v3)
+
+add_executable(day2_part2 day2_part2.cc)
+target_link_libraries(day2_part2 PRIVATE range-v3::range-v3)
