Added solution to day3 part1. Updated style.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,6 @@ target_link_libraries(day2_part1 PRIVATE range-v3::range-v3)
 
 add_executable(day2_part2 day2_part2.cc)
 target_link_libraries(day2_part2 PRIVATE range-v3::range-v3)
+
+add_executable(day3 day3.cc)
+target_link_libraries(day3 PRIVATE range-v3::range-v3)
