Added day5 part1 solution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,3 +54,6 @@ target_link_libraries(day3_part2 PRIVATE range-v3::range-v3)
 
 add_executable(day4 day4.cc)
 target_link_libraries(day4 PRIVATE range-v3::range-v3)
+
+add_executable(day5 day5.cc)
+target_link_libraries(day5 PRIVATE range-v3::range-v3)
