Added day6 part1 and 2 solutions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,3 +57,6 @@ target_link_libraries(day4 PRIVATE range-v3::range-v3)
 
 add_executable(day5 day5.cc)
 target_link_libraries(day5 PRIVATE range-v3::range-v3)
+
+add_executable(day6 day6.cc)
+target_link_libraries(day6 PRIVATE range-v3::range-v3)
