--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,3 +60,6 @@ target_link_libraries(day5 PRIVATE range-v3::range-v3)
 
 add_executable(day6 day6.cc)
 target_link_libraries(day6 PRIVATE range-v3::range-v3)
+
+add_executable(day7 day7.cc)
+target_link_libraries(day7 PRIVATE range-v3::range-v3)
