--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,5 +64,8 @@ target_link_libraries(day6 PRIVATE range-v3::range-v3)
 add_executable(day7 day7.cc)
 target_link_libraries(day7 PRIVATE range-v3::range-v3)
 
-add_executable(day8 day8.cc)
-target_link_libraries(day8 PRIVATE range-v3::range-v3)
+add_executable(day8_part1 day8_part1.cc)
+target_link_libraries(day8_part1 PRIVATE range-v3::range-v3)
+
+add_executable(day8_part2 day8_part2.cc)
+target_link_libraries(day8_part2 PRIVATE range-v3::range-v3)
